# rustify

./: .gitignore  .project  LICENSE  README.md
code-from-book/ch10_generic_types_traits_lifetimes/1_generic_types/: 2_diff_generic_types_in_struct.rs  4_generic_type_in_method_def.rs  5_generic_type_in_method_def.rs
code-from-book/ch10_generic_types_traits_lifetimes/2_traits/: 1_trait_on_a_type.rs  2_default_impl.rs  3_default_impl.rs  6_example_problem.rs
code-from-book/ch10_generic_types_traits_lifetimes/3_lifetime/: cacher.rs
code-from-book/ch10_generic_types_traits_lifetimes/generic_types/: 1_generic_type_in_struct.rs  3_generic_types_in_enum.rs
code-from-book/ch10_generic_types_traits_lifetimes/traits/: 4_traits_as_params.rs  5_return_types_that_impl_traits.rs  7_conditionally_impl_methods.rs  8_conditionally_impl_traits.rs
code-from-book/ch11_iter_and_closures/: example_problem.rs  impl_iterator.rs
code-from-book/ch4_ownership/: 1_return_usize.rs  2_return_ref_str.rs  3_slice_as_param.rs  4_other_slices.rs
code-from-book/ch5_structs/: 1_struct_inst.rs  2_mut_inst.rs  3_inst_from_fn.rs  5_tuple_structs.rs  6_access_fields.rs  associated_fns.rs  method_params.rs  method_sytx.rs  multi_impl_blocks.rs
code-from-book/ch6_enums_patterns/1_enum/: 1_enum_def.rs  2_enum_in_struct.rs  3_data_in_enum.rs  4_data_type_in_enum.rs  5_struct_vs_enum.rs  6_methods_on_enum.rs  7_option_T.rs
code-from-book/ch6_enums_patterns/2_match/: 1_matching_option_T.rs  2_match_ctrl_flow.rs  3_exhaustive_match.rs  4_matching_any_val.rs
code-from-book/ch7_modules/: Cargo.toml
code-from-book/ch7_modules/restaurant/src/: back_of_house.rs  lib.rs
code-from-book/ch8_collections/1_vectors/: 1_creating_vec.rs  2_updating_vec.rs  3_reading_elements.rs  4_iterating_vec.rs  5_enum_in_vec_for_multi_types.rs
code-from-book/ch8_collections/2_strings/: 1_create_new_string.rs  2_updating_string.rs  3_concat_string.rs  4_indexing_into_string.rs  5_bytes_scalar_grapheme.rs  6_slicing_strings.rs  7.iterating_strings.rs
code-from-book/ch8_collections/3_hashmap/: 1_create_hash_map.rs  2_hashmap_and_ownership.rs  3_accessing_val.rs  4_updating_hashmap.rs
code-from-book/ch8_collections/3_hashmap/ex1/: main.rs
code-from-book/ch8_collections/3_hashmap/ex2/: main.rs
code-from-book/ch8_collections/3_hashmap/ex3/: Cargo.toml
code-from-book/ch8_collections/3_hashmap/ex3/src/: input.rs  main.rs  output.rs
code-from-book/ch9_error_handling/: 1_error_handle_match.rs  2_error_handle_match.rs  3_ques_mark_operator.rs
main-ground/: Cargo.toml
main-ground/src/: main.rs
problems/: 2_multiply_2_matrices.rs  3_1_closest_sum_pair.rs  3_2_closest_sum_pair.rs  3_3_closest_sum_pair.rs  3_check_for_pair_in_array_with_sum_as_x.rs  3_closest_sum_pair.rs  3_pair_whose_sum_nearmost.rs  4_pair_whose_sum_is_x.rs  6_odd_occuring_elem.rs  7_largest_cont_subarray.rs  multiply_2_matrices.rs
problems/between-us/: Cargo.toml  README.md
problems/between-us/src/: interface.rs
problems/bsutils/: Cargo.toml  README.md
problems/bsutils/src/: interface.rs
problems/bsutils/tests/: integration_tests.rs
problems/closest-sum-pair/: Cargo.toml  README.md
problems/closest-sum-pair/algorithm/: Cargo.toml
problems/closest-sum-pair/algorithm/tests/: output_validity.rs
problems/closest-sum-pair/engine/src/: lib.rs
problems/closest-sum-pair/engine/tests/: output_validity.rs
problems/closest-sum-pair/find-pair/: Cargo.toml
problems/closest-sum-pair/find-pair/src/: main.rs
problems/closest-sum-pair/src/: interface.rs  lib.rs
problems/closest-sum-pair/tests/: integration_test.rs
problems/closest_sum_pair/: Cargo.toml
problems/closest_sum_pair/src/: lib.rs
problems/elements-frequency/: Cargo.toml  README.md
problems/elements-frequency/src/: interface.rs  lib.rs
problems/elements-frequency/tests/: integration_test.rs
problems/far-away/src/: interface.rs
problems/far-away/tests/: integration_tests.rs
problems/gcd-bitwise/: Cargo.toml  README.md
problems/gcd-bitwise/src/: interface.rs
problems/gcd-bitwise/tests/: integration_test.rs
problems/hidden-median/: Cargo.toml  README.md
problems/hidden-median/src/: interface.rs  lib.rs
problems/hidden-median/tests/: integration_test.rs
problems/lcs/: Cargo.toml
problems/lcs/src/: interface.rs
problems/lcs/tests/: integration_tests.rs
problems/lisa/: Cargo.toml  README.md
problems/lisa/src/: interface.rs
problems/lisa/tests/: integration_tests.rs
problems/max-subarray-sum/: Cargo.toml  README.md
problems/max-subarray-sum/src/: implement.rs  interface.rs  lib.rs
problems/max-subarray-sum/src/interface/: implement.rs  structure.rs
problems/max-subarray-sum/tests/: integration_test.rs
problems/merry-go-round/: Cargo.toml
problems/merry-go-round/src/: interface.rs
problems/no-adjacent/: Cargo.toml  README.md
problems/no-adjacent/src/: interface.rs
problems/no-adjacent/tests/: integration_testa.rs
problems/only-testing/: Cargo.toml
problems/only-testing/src/: main.rs
problems/rotation/: Cargo.toml  README.md
problems/rotation/src/: interface.rs
problems/rotation/tests/: integration_test.rs
problems/sorted-rotated/: Cargo.toml  README.md
problems/sorted-rotated/src/: lib.rs
problems/sorted-rotated/tests/: integration_test.rs
problems/stacked-sandwich/: Cargo.toml  README.md
problems/stacked-sandwich/src/: interface.rs
problems/stacked-sandwich/tests/: integration_tests.rs
problems/thermo-project/: Cargo.toml
problems/thermo-project/src/: main.rs
problems/two-sorted/: Cargo.toml
problems/two-sorted/src/: interface.rs
problems/two-sorted/tests/: integration_test.rs
problems/wip-code/: 1_recursively_search_for_an_element.rs  5_majority_element.rs
