[package]
name = "closest-sum-pair"
version = "0.1.7"
edition = "2018"
description = "Finds a pair in a list that has the closest sum to a given number."
documentation = "https://docs.rs/closest-sum-pair"
repository = "https://github.com/Inoshy/rust-book-helper/tree/master/problems/closest-sum-pair"
license = "MIT"
keywords = ["algorithm", "numbers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
