[package]
name = "closest-sum-pair"
version = "1.0.0"
edition = "2018"
description = "Finds a pair in a list that has the closest sum to a given number."
documentation = "https://docs.rs/closest-sum-pair"
repository = "https://codeberg.org/ino/rusty-algos/src/branch/master/problems/closest-sum-pair"
license = "MIT"
keywords = ["algorithm", "numbers", "sum"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
