[package]
name = "gcd-bitwise"
version = "0.1.5"
edition = "2018"
description = "The binary Euclidean algorithm for computing gcd."
documentation = "https://docs.rs/gcd_bitwise"
repository = "https://github.com/Inoshy/rust-book-helper/tree/master/problems/gcd-bitwise"
license = "MIT"
keywords = ["algorithm", "gcd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
