[package]
name = "hidden-median"
version = "0.1.0"
edition = "2018"
description = "Finds the median of two lists, when merged without breaking sorted state."
documentation = "https://docs.rs/hidden_median"
repository = "https://github.com/Inoshy/rust-book-helper/tree/master/problems/hidden-median"
license = "MIT"
keywords = ["algorithm", "array", "merge", "median"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
