[package]
name = "lisa"
version = "0.2.0"
edition = "2021"
description = "lisa - longest increasing subsequence algorithm [ O( nlogn ) ]"
documentation = "https://docs.rs/lisa"
repository = "https://github.com/LittleTasteOfHeaven/rusty-algos/tree/master/problems/lisa"
license = "MIT"
keywords = ["algorithm", "lis"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
