[package]
name = "max-subarray-sum"
version = "0.1.6"
edition = "2018"
description = "Finds the maximum subarray sum in a list."
documentation = "https://docs.rs/max-subarray-sum"
repository = "https://github.com/Inoshy/rust-book-helper/tree/master/problems/max-subarray-sum"
license = "MIT"
keywords = ["algorithm", "subarray"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
